# D-FAST_Bank_Erosion

./: .gitignore  .pre-commit-config.yaml  BuildDfastbe.bat  CopyDutchRiversFile.bat  CopyGeoPandas.bat  CopyLanguageFile.bat  CopyUserManualFile.bat  Meuse_manual.cfg  PostBuild.bat  README.md  build_dfastbe.bat  mkdocs.yml  poetry.toml  pyproject.toml  sonar-project.properties  versions.json
.github/: pull_request_template.md
.github/workflows/: ci.yml  docs.yml  docs_release.yml  github-pages-mkdocs.yml  release.yml  sigrid-publish.yml  sigrid-pullrequest.yml  synch-to-gitlab.yml  testing.yml
.teamcity/DFastBETests/: build_main.kt  build_terminal.kt  buildwithcommandwindow.kt  buildwithoutcommandwindow.kt  conda_template.kt  condatemplate.kt  dfastcleanconfiguration.kt  distributiontests.kt  latex_manual.kt  latexmanualgeneration.kt  poetry_template.kt  pom.xml  settings.kts  signed_release.kt  signed_release_terminal.kt  signedrelease.kt  signedreleasecommand.kt  template.kt  test_binaries.kt  testbinaries.kt  unit_tests.kt  unittestssonarcloud.kt
3.0.0/: 404.html  change-log.html  index.html  license.html  objects.inv  sitemap.xml
3.0.0/api/: cmd.html  io.html  plotting.html  utils.html
3.0.0/api/bank_erosion/: bank_erosion.html  debugger.html  erosion_calculation.html  (+2 more)
3.0.0/architecture-design/: class-diagram.html  detailed-class-diagram.html  main-components.html
3.0.0/gui/: gui.html
3.0.0/guides/: contributing.html  developer-instructions.html  doctest.html  documentation.html  poetry.html  pre-commit-hooks.html  teamcity-ci.html  testing.html
BuildScripts/: BuildDfastbe.bat  BuildDfastbe_no_command_window.bat  Collect_Examples.bat  CopyDutchRiversFile.bat  CopyGeoPandas.bat  CopyLanguageFile.bat  CopyProjDirectory.bat  CopyUserManualFile.bat  Move_Libs.bat  PostBuild.bat
develop/: 404.html  bank_erosion.html  bank_lines.html  change-log.html  changelog.html  cmd.html  gui.html  index.html  io.html  kernel.html  license.html  objects.inv  plotting.html  sitemap.xml
develop/api/: bank_erosion.html  bank_lines.html  bank_lines_data_models.html  cmd.html  io.html  kernel.html  plotting.html  runner.html  utils.html
develop/architecture-design/: class-diagram.html  detailed-class-diagram.html  main-components.html
develop/gui/: gui.html
develop/guides/: contributing.html  developer-instructions.html  doctest.html  documentation.html  poetry.html  pre-commit-hooks.html  setup.html  teamcity-ci.html  testing.html
develop/mkdocs/: bank_erosion.html  bank_lines.html  changelog.html  cmd.html  gui.html  index.html  io.html  kernel.html  plotting.html
develop/search/: search_index.json
dfastbe/: __init__.py  __main__.py  batch.py  cli.py  cmd.py  gui.py  io.py  kernel.py  messages.NL.ini  messages.UK.ini  plotting.py  support.py
dfastbe/sim2ugrid/: sim2ugrid.m
docs/: bank_lines.md  batch.md  changelog.md  cmd.md  deltares_manual_dfastbe.cls  dfastbe.bib  dfastbe.tcp  dfastbe_design.tcp  dfastbe_designdoc.tex  dfastbe_techref.tex  dfastbe_usermanual.tex  gui.md  index.md  kernel.md  techref.md  userman.md
docs/chapters/: bankmaterial.tex  code_structure.tex  concepts.tex  detection.tex  file_formats.tex  get_started.tex  guide.tex  intro_tech.tex  introduction.tex  references.tex  requirements.tex  shipwaves.tex  software_maintenance.tex  testing.tex  userman.tex
docs/end-user-docs/: deltares_manual_dfastbe.cls  dfastbe_release_notes.tcp  dfastbe_release_notes.tex  dfastbe_techref.tcp  dfastbe_techref.tex  dfastbe_usermanual.tex
docs/figures/: crosssec.pdf_tex  detect_step.pdf_tex  detection_issue.pdf_tex  equiprof.pdf_tex  erobankwaves.pdf_tex  erode_shift_step.pdf_tex  erodedvol.pdf_tex  fig5.3.py
docs/guides/: contributing.md  developer-instructions.md  doctest.md  setup.md
docs/mkdocs/: change-log.md  index.md  io.md  plotting.md
docs/technical-manual/: deltares_manual_dfastbe.cls  dfastbe.tcp  dfastbe_techref.tcp  techref.md
docs/techref/: techref.md
docs/usermanual/: dfastbe_usermanual.tex  userman.md
end-user-docs/: dfastbe.bib  dfastbe_usermanual.tex
end-user-docs/chapters/: concepts.tex  detection.tex  file_formats.tex  intro_tech.tex  introduction.tex
end-user-docs/figures/: fig5.3.py  layered_bank.pdf_tex
master/: 404.html  change-log.html  index.html  license.html  objects.inv  sitemap.xml
master/api/: bank_erosion.html  bank_lines.html  bank_lines_data_models.html  cmd.html  io.html  kernel.html  plotting.html  runner.html  utils.html
master/architecture-design/: class-diagram.html  detailed-class-diagram.html  main-components.html
master/gui/: gui.html
master/guides/: contributing.html  developer-instructions.html  doctest.html  documentation.html  poetry.html  pre-commit-hooks.html  teamcity-ci.html  testing.html
master/search/: search_index.json
src/: dfastbe.py  dfastbe.sln  dfastbe_cli.py  dfastbe_gui.py  dfastbe_io.py  dfastbe_kernel.py  dfastbe_support.py  messages.NL.ini  src.pyproj
src/dfastbe/: __init__.py  __main__.py  bank_erosion.py  bank_lines.py  base_calculator.py  batch.py  cmd.py  gui.py  io.py  kernel.py  messages.UK.ini  plotting.py  runner.py  src.pyproj  structures.py  support.py  utils.py
src/sim2ugrid/: sim2ugrid.m
test/test1/: test1.ini
tests/: conftest.py  context.py  test_bank_erosion.py  test_bank_lines.py  test_cli_main.py  test_io.py  test_structures.py
tests-dist/: test_basic.py  test_batch.py
tests/files/: e02_f001_c011_simplechannel_map.nc  messages.UK.ini  read_waqua_xyz_test.xyc
tests/test_bank_lines/: test_bank_lines.py  test_bank_lines_data_models.py
tests/test_binaries/: conftest.py  test_basic.py  test_batch.py
tests/test_erosion/: conftest.py  test_bank_erosion.py  test_data_models.py  test_erosion_calculator.py  test_mesh_processor.py  test_structures.py  test_utils.py
tests/test_gui/: conftest.py  test_configs.py  test_create_dialog.py  test_get_configuration.py  test_gui_utils.py  test_tab_detection.py  test_tab_erosion.py  test_tab_general.py  test_tabs.py
tests/test_io/: test_io.py  test_logging.py
workflows/: formatting.yml
(+165 files in other folders)
