[tool.poetry]
name = "d-fast-bank-erosion"
version = "2.3.1"
description = "A tool to perform a bank erosion analysis based on a number of D-Flow FM simulations."
authors = ["Stichting Deltares <delft3d.support@deltares.nl>"]
readme = "README.md"
packages = [{ include = "dfastbe", from= "src"}]

[tool.poetry.dependencies]
python = "^3.9.12"
numpy = "<1.20.0"
netcdf4 = "1.5.5"
fiona = "^1.8.22"
pandas = "1.1.3"
pyproj = "^3.4.1"
pyqt5 = "^5.15.7"
pyqt5-qt5 = "5.15.2"
ordered-set = "^4.1.0"
cftime = "1.3.0"
matplotlib = "^3.6.3"
geopandas = "^0.12.2"
shapely = "1.8.4"


[tool.poetry.group.dev.dependencies]
nuitka = "^1.3.8"
pytest = "^7.2.1"
pytest-cov = "^6.0.0"
black = "^22.12.0"
teamcity-messages = "^1.32"
pre-commit = "^4.2.0"


[tool.poetry.scripts]
dfastbe = 'dfastbe.__main__:main'


[tool.flake8]
ignore = ["E501", "E203", "F821", "E722", "B001", "D401", "B006", "D202", "W503"]
max-line-length = 88

[tool.black]
profile = "flake8"
line-length = 88
skip-string-normalization = true  # Avoid unnecessary quote changes

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
