[tool.poetry]
name = "d-fast-bank-erosion"
version = "2.3.1"
description = "A tool to perform a bank erosion analysis based on a number of D-Flow FM simulations."
authors = ["Stichting Deltares <delft3d.support@deltares.nl>"]
readme = "README.md"
packages = [{ include = "dfastbe", from= "src"}]

[tool.poetry.dependencies]
python = "~3.10.0"
numpy = "1.22.0"
netcdf4 = "1.5.8"
pandas = "1.4.0"
pyqt5 = "^5.15.7"
pyqt5-qt5 = "5.15.2"
ordered-set = "^4.1.0"
matplotlib = "3.8.4"
geopandas = "^0.14.4"
shapely = "^2.1.0"
dfastio = { git = "https://github.com/Deltares/D-FAST_Commons.git", tag = "0.1.0-alpha.2" }

[tool.poetry.group.binary.dependencies]
cftime  = ">=1.6.3"
pyproj = "^3.4.1"

[tool.poetry.group.dev.dependencies]
nuitka = "^1.3.8"
imageio = "^2.33.1"
pytest = "^7.2.1"
pytest-cov = "^6.0.0"
pyfakefs = "^5.1.0"
black = "^22.12.0"
teamcity-messages = "^1.32"
pre-commit = "^4.2.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.2"
mkdocs-material = "^9.5"
mkdocstrings = {extras = ["python"], version = "^0.27.0"}
pymdown-extensions = "^10.12"
mkdocs-autorefs = "^1.2"
mkdocs-macros-plugin = "^1.3.7"
mkdocs-table-reader-plugin = "^3.1.0"
mkdocs-jupyter = "^0.25.1"
mkdocs-mermaid2-plugin = "^1.2.1"
mike = "^2.1.3"
jupyter-contrib-nbextensions = "^0.7.0"
notebook = "<7.0"

[tool.poetry.scripts]
dfastbe = 'dfastbe.__main__:main'


[tool.coverage.report]
show_missing = true
fail_under = 61

[tool.flake8]
ignore = ["E501", "E203", "F821", "E722", "B001", "D401", "B006", "D202", "W503"]
max-line-length = 88

[tool.black]
profile = "flake8"
line-length = 88
skip-string-normalization = true  # Avoid unnecessary quote changes

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
addopts = [ "--ignore=tests-dist",
            "--cov",
            "--cov-report=term",
            "--cov-report=html",
            "--cov-report=xml:coverage-reports/coverage.xml",
]
testpaths="tests"
python_functions=["given_*",
                    "Given_*",
                    "test_*",
                    "Test_*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
